--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,113 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.medalsheader {
+  text-align: left;
+}
+.medalstable {
+  color: #1d1d1d;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.medalstable__country {
+  text-align: left;
 }
 
-.App-link {
-  color: #61dafb;
+.medal-icon {
+  border-radius: 50%;
+  height: 1rem;
+  width: 1rem;
+  display: inline-block;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.medal-icon--gold {
+  background-color: gold;
+}
+
+.medal-icon--silver {
+  background-color: silver;
+}
+.medal-icon--bronze {
+  background-color: #CD7F32;
+}
+
+.flag {
+  background-repeat: no-repeat;
+  background-image: url('flags.png');
+  display: inline-block;
+  height: 17px;
+  width: 28px;
+}
+
+.flag--AUT {
+  background-position: 0px 0px;
+}
+
+.flag--BLR {
+  background-position: 0px -17px;
+}
+
+.flag--CAN {
+  background-position: 0px -34px;
+}
+
+.flag--CHN {
+  background-position: 0px -51px;
+}
+
+.flag--FRA {
+  background-position: 0px -68px;
+}
+
+.flag--GER {
+  background-position: 0px -85px;
+}
+
+.flag--ITA {
+  background-position: 0px -102px;
+}
+
+.flag--NED {
+  background-position: 0px -119px;
+}
+
+.flag--NOR {
+  background-position: 0px -136px;
+}
+
+.flag--RUS {
+  background-position: 0px -153px;
+}
+
+.flag--SUI {
+  background-position: 0px -170px;
+}
+
+.flag--SWE {
+  background-position: 0px -187px;
+}
+
+.flag--USA {
+  background-position: 0px -204px;
+}
+
+table {
+  /* min-width: 80%; */
+  border-collapse: collapse;
+  color: #ddd;
+}
+
+tbody {
+  text-align: center;
+  /* vertical-align: middle; */
+}
+
+
+th, td {
+  padding: 0.25rem;
+  border-bottom: #ddd solid 1px;
+}
+
+.sorted {
+  border-top: #ddd 2px solid;
 }
